# fia

./: .gitignore  README.md  pyproject.toml
src/fia/: __init__.py  cli_args.py  constants.py  main.py
src/fia/stubs/websocket/: __init__.pyi  _abnf.pyi  _app.pyi  _cookiejar.pyi  _core.pyi  _exceptions.pyi  _handshake.pyi  _http.pyi  _logging.pyi  _socket.pyi  _ssl_compat.pyi  _url.pyi  _utils.pyi  _wsdump.pyi
src/fia/utils/: create_property.py  set_logger.py
tests/: test_cli_args.py
tests/main/: test_create_message.py  test_generate_random_token.py  test_get_json_data.py  test_get_pandas_data.py  test_init_class_and_properties.py  test_main.py
tests/slow_tests/: test_as_cli_app.py  test_as_package.py
tests/utils/: test_create_property.py  test_set_logger.py  testsup.py
